[gd_scene load_steps=9 format=2]

[ext_resource path="res://Level Construction Tools/Teleporter/Green_Teleport_Anim.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Level Construction Tools/Teleporter/TpScript.gd" type="Script" id=2]
[ext_resource path="res://Audio/Sound FX/teleport_with_extra_reverb.mp3" type="AudioStream" id=3]

[sub_resource type="Animation" id=5]
resource_name = "Fade_Intro"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Fade_Option"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Fade_Quit"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Fade_Start"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=115]
radius = 7.0
height = 30.0

[node name="AnimatedTpGreen" type="AnimatedSprite"]
position = Vector2( 333, 129 )
frames = ExtResource( 1 )
animation = "On"
frame = 4
playing = true
flip_h = true
script = ExtResource( 2 )

[node name="HideParallax" type="CanvasLayer" parent="."]
layer = 40

[node name="Fade" type="ColorRect" parent="HideParallax"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -793.0
margin_top = -330.0
margin_right = 1063.0
margin_bottom = 686.0
color = Color( 0, 0, 0, 0 )

[node name="Fade_Animation" type="AnimationPlayer" parent="HideParallax/Fade"]
anims/Fade_Intro = SubResource( 5 )
anims/Fade_Option = SubResource( 6 )
anims/Fade_Quit = SubResource( 7 )
anims/Fade_Start = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 5 )
shape = SubResource( 115 )

[node name="TeleportFx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="animation_finished" from="HideParallax/Fade/Fade_Animation" to="." method="_on_Fade_Animation_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
